# DataLogicEngine

./: -UKG_Simulation_Build_Guide.txt  .bandit  .coverage  .env  .env.template  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc.json  .replit  AXIS-2 world wide codes systems.xlsx  BRANCH_CONSOLIDATION_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSOLIDATED_TODO.md  CONTRIBUTING.md  CREDENTIALS_SETUP.md  DEPENDENCY_VULNERABILITIES.md  DOCUMENTATION_UPDATES_NEEDED.md  Dockerfile  ENTERPRISE_SECURITY.md  LICENSE  MIGRATIONS.md  MIGRATION_CHECKLIST.md  Multi Dimensional AI Driven Knowledge Framework A Technical Deep Dive.docm  OPERATIONAL_RECOMMENDATIONS.md  PHASE_1_STATUS.md  PHASE_2_STATUS.md  PHASE_3_STATUS.md  PL-1-107 with members.xlsx  PRODUCTION_REVIEW_SUMMARY.md  README.md  SECRETS.md  SECURITY.md  SECURITY_ENHANCEMENTS_SUMMARY.md  ZERO_TRUST_ARCHITECTURE.md  app.py  check_enterprise_health.py  config.env  config.py  (+61 more)
.github/: pull_request_template.md
.next/: BUILD_ID  build-manifest.json  export-detail.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
__mocks__/: d3.js  react-force-graph-2d.js
attached_assets/: 10-38-54-PL_Levels_Mapping_Request.txt  23-14-9-KGs_and_LLMs_for_AGI (1).txt  App high level build plan give to agents last'.txt  Core logic B 5-18.txt  Core logic D 5-18.txt  Core logic E PL levels 5-18.txt  CoreLogic A 5-18.txt  Pasted--Creating-a-database-Please-help-me-add-a-database-to-my-app-Just-now-KH-KevinHerrera21-C-1747628165423.txt  (+36 more)
(+799 files in other folders)
